syntax = "proto3";

option java_multiple_files = true;
option java_package = "Tinkar.ProtoBuf";
option java_outer_classname = "PBTinkar";

option csharp_namespace = "Tinkar.ProtoBuf.CS";

import "Proto/Common/PBPublicId.proto";
import "Proto/Component/PBConcept.proto";

package Tinkar.ProtoBuf;

message PBFieldDefinition {
  PBConcept Meaning = 1;
  PBPublicId DataTypePublicId = 2;
  PBPublicId PurposePublicId = 3;
  PBPublicId MeaningPublicId = 4;
}
